# CMakeList.txt : CMake project for Matching_Game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Matching_Game")

# Add source to this project's executable.
add_executable (Matching_Game "Matching_Game.cpp" "Matching_Game.h")

# TODO: Add tests and install targets if needed.
